# information-theory

./: .env  .gitignore  Cargo.toml  LICENSE  readme
db/migrations/: 1_add_normalized_col.sql  2_normalize_data.sql  3_indexing_for_queries.sql
scripts/: plot-ticker.py
src/: api.rs  constants.rs  data_utils.rs  db_connections.rs  lib.rs  main.rs  repo.rs
src/api/: ticker_data.rs
src/repo/: ticker_data_repo.rs
tests/: ticker_data_tests.rs
tests/common/: mod.rs
