[package]
name = "information-theory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "information_theory"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate" ] }
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["attributes", "tokio-runtime"] }
